--- a/app/src/main/res/layout/fragment_level_three.xml
+++ b/app/src/main/res/layout/fragment_level_three.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LevelThreeFragment">
+    tools:context=".levelsfragments.LevelThreeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleView3"
