--- a/app/src/main/res/layout/fragment_course_100_first.xml
+++ b/app/src/main/res/layout/fragment_course_100_first.xml
@@ -8,7 +8,7 @@
     tools:context=".CourseFragment100First">
 
 
-    <TextView
+   <!-- <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="First Semester Under Construction"
@@ -16,16 +16,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textSize="45sp"/>
+        android:textSize="45sp"/>-->
 
-    <!--    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycleViewCourse"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycleViewCourse100I"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/semester_list" />-->
+            tools:listitem="@layout/semester_list" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
