--- a/app/src/main/res/layout/fragment_course_100_second.xml
+++ b/app/src/main/res/layout/fragment_course_100_second.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".CourseFragment100Second">
 
-    <TextView
+<!--    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Second Semester Under Construction"
@@ -14,16 +14,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textSize="45sp"/>
+        android:textSize="45sp"/>-->
 
-<!--    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycleViewCourse"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleViewCourse100II"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/semester_list" />-->
+        tools:listitem="@layout/semester_list" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
