--- a/app/src/main/res/layout/fragment_course_500_first.xml
+++ b/app/src/main/res/layout/fragment_course_500_first.xml
@@ -4,20 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".courseslistpersemesterfragments.CourseFragment100Second">
-
-<!--    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Second Semester Under Construction"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textSize="45sp"/>-->
+    tools:context=".courseslistpersemesterfragments.CourseFragment500First">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycleViewCourse100II"
+        android:id="@+id/recycleViewCourse500I"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
