Added the textview for the semester to the questions page

--- a/app/src/main/res/layout/fragment_questions.xml
+++ b/app/src/main/res/layout/fragment_questions.xml
@@ -30,6 +30,15 @@
         app:layout_constraintStart_toStartOf="@+id/CourseTitle"
         app:layout_constraintTop_toBottomOf="@+id/CourseTitle" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="First/Second Semester"
+        app:layout_constraintEnd_toEndOf="@+id/YearOrSession"
+        app:layout_constraintStart_toStartOf="@+id/YearOrSession"
+        app:layout_constraintTop_toBottomOf="@+id/YearOrSession" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -39,7 +48,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/YearOrSession">
+        app:layout_constraintTop_toBottomOf="@+id/textView3">
 
         <TextView
             android:id="@+id/Questions"
@@ -52,6 +61,8 @@
             android:textAlignment="center"
             android:textSize="20sp" />
     </ScrollView>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
