--- a/app/src/main/res/layout/fragment_questions.xml
+++ b/app/src/main/res/layout/fragment_questions.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/CourseTitle" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/firstOrSecondSemester"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="First/Second Semester"
@@ -48,7 +48,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
+        app:layout_constraintTop_toBottomOf="@+id/firstOrSecondSemester">
 
         <TextView
             android:id="@+id/Questions"
