--- a/app/src/main/res/layout/fragment_course_100_second.xml
+++ b/app/src/main/res/layout/fragment_course_100_second.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".courseslistpersemesterfragments.CourseFragment100Second">
+    tools:context=".coursefragments.CourseFragment100Second">
 
 <!--    <TextView
         android:layout_width="wrap_content"
