--- a/app/src/main/res/layout/fragment_course_200_second.xml
+++ b/app/src/main/res/layout/fragment_course_200_second.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".courseslistpersemesterfragments.CourseFragment200Second">
+    tools:context=".coursefragments.CourseFragment200Second">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
