--- a/app/src/main/res/layout/fragment_course_300_first.xml
+++ b/app/src/main/res/layout/fragment_course_300_first.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".courseslistpersemesterfragments.CourseFragment300First">
+    tools:context=".coursefragments.CourseFragment300First">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewCourse300I"
