--- a/app/src/main/res/layout/fragment_course_300_second.xml
+++ b/app/src/main/res/layout/fragment_course_300_second.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".courseslistpersemesterfragments.CourseFragment300Second">
+    tools:context=".coursefragments.CourseFragment300Second">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewCourse300II"
