--- a/app/src/main/res/layout/fragment_cons1.xml
+++ b/app/src/main/res/layout/fragment_cons1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".secondyearfirstsem.Cons1Fragment">
+    tools:context=".secondyear.Cons1Fragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/session"
