--- a/app/src/main/res/layout/fragment_contract2.xml
+++ b/app/src/main/res/layout/fragment_contract2.xml
@@ -5,8 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".secondyear.Contract1Fragment">
+    tools:context=".Contract2Fragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/session"
         android:layout_width="match_parent"
