--- a/app/src/main/res/layout/fragment_legal_system2.xml
+++ b/app/src/main/res/layout/fragment_legal_system2.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".secondyear.Contract1Fragment">
+    tools:context=".LegalSystem2Fragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/session"
@@ -16,5 +15,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/semester_list" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
