--- a/app/src/main/res/layout/fragment_psycho1.xml
+++ b/app/src/main/res/layout/fragment_psycho1.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".secondyearfirstsem.Psycho1Fragment">
+    tools:context=".secondyear.Psycho1Fragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/session"
